--- a/source/_posts/个人传-免.md
+++ b/source/_posts/个人传-免.md
@@ -7,6 +7,7 @@ categories: 个人传
 ## 开始了
 我也不知道为什么要写这样的东西,或许,这对我来说,是类似日记周记甚至"月记"的存在吧?    
 其实,我更希望阅读到这篇文章的,与我同样境遇的人可以得到激励吧!
+<!-- more -->
 ## 不忘过去
 我在过去走了太多的错路,现在还有机会吗?
 ## 这个系列可能会是一份编年史吧?
