--- a/source/_posts/ph01.md
+++ b/source/_posts/ph01.md
@@ -33,7 +33,7 @@ categories: 捕获瞬间
 
 ## 最终还是入坑了
 为了做照片处理,我特么的....装了一堆ADOBO软件
-{% asset_img flower.png%}
+{% asset_img taskbar.png%}
 
 ## 后记
 这14天里,我的心情变化是比较复杂的
