--- a/source/_posts/ph01.md
+++ b/source/_posts/ph01.md
@@ -32,7 +32,7 @@ categories: 捕获瞬间
 {% asset_img flower.jpg%}
 
 ## 最终还是入坑了
-为了做照片处理,我特么的....装了一堆ADOBO软件
+为了做照片处理,我特么的....装了一堆ADOBE软件
 {% asset_img taskbar.png%}
 
 ## 后记
