优化图片加载

--- a/source/_posts/ph00.md
+++ b/source/_posts/ph00.md
@@ -4,7 +4,7 @@ date: 2019-02-25 01:33:02
 categories: 捕获瞬间
 tags: [摄影,尼康,记录,闲谈,Just4Fun,买买买]
 ---
-{% asset_img camera.jpg%}
+{% asset_img camera_m.jpg%}
 虽然我在2019年面临经济崩溃，但出于提高个人修养，陶冶情操的目的，我决定购置一台入门级单反，实现我的摄影梦想
 <!-- more -->
 # 永恒的生命,无尽的折磨
