--- a/source/_posts/ph02.md
+++ b/source/_posts/ph02.md
@@ -5,7 +5,9 @@ tags: [摄影,尼康,记录,闲谈,Just4Fun]
 categories: 捕获瞬间
 ---
 2019年3月14日,我在昆明理工大学随手拍了些皂片
-{% asset_img DSC-0568M.png%}
+
+{% asset_img DSC_0568_m.jpg%}
+
 <!-- more -->
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=432430716&auto=1&height=66"></iframe>
 {% asset_img DSC_0544.jpg%}
