日常维护与更新

--- a/source/_posts/nf-00.md
+++ b/source/_posts/nf-00.md
@@ -3,6 +3,7 @@ title: 「NF-00」控诉
 date: 2019-09-03 21:09:07
 tags: [言叶之庭,绝望,希望]
 categroies: 'Never Forget'
+notshow: true
 ---
 写着写着,这个站点就成了情感博客。
 我想，这是因为我知识浅薄而又想得太多吧?
