--- a/source/_posts/个人传-免.md
+++ b/source/_posts/个人传-免.md
@@ -2,7 +2,8 @@
 title: 个人传-免
 date: 2018-05-06 15:58:28
 tags: Just4Fun
-categories: 个人传
+categories: 言叶之庭
+hidden: true
 ---
 ## 开始了
 我也不知道为什么要写这样的东西,或许,这对我来说,是类似日记周记甚至"月记"的存在吧?    
