--- a/source/_posts/评论系统上线.md
+++ b/source/_posts/评论系统上线.md
@@ -2,8 +2,7 @@
 title: 评论系统上线
 date: 2018-10-09 23:22:58
 tags: [博客维护]
-categories: 基础技术
+categories: 前端
 ---
 用的是valine评论系统,得益于NexT提供的支持,我很快便将评论系统上线到本博客.
 从今往后,多多评论啊!
-<!-- more -->
